Added virtual thread example